--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -47,10 +47,6 @@ html, body {
     flex-direction: column;
 }
 
-#title {
-    align-self: center;
-}
-
 .taskInput {
     background-color: lightgreen;
     margin: 10px 10px 0px 10px;
@@ -61,10 +57,15 @@ html, body {
 }
 
 #title {
-    padding-left: 20px;
+   text-align: center;
 }
 
 #taskInputLine {
+    display: flex;
+    justify-content: space-around;
+}
+
+/* #taskInputLine {
     padding-left: 20px;
 }
 
@@ -75,7 +76,7 @@ html, body {
 #taskInputLine > select {
     margin-right: 20px;
     width: 80px;
-}
+} */
 
 .List {
     margin: 0 10px 10px 10px;
@@ -97,7 +98,8 @@ html, body {
 }
 
 .listItem > input {
-    border-radius: 100px;
+    margin-left: 20px;
+    margin-right: 10px;
 }
 
 .taskText {
@@ -105,8 +107,14 @@ html, body {
 }
 
 .taskTime {
-    display: static;
-    right: 100px;
+    padding-right: 20px;
+
+}
+
+.listTimeAndTask {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 /* media queries */
@@ -119,5 +127,68 @@ html, body {
     .Sidebar {
         width: 100%;
         height: 60%;
+    }
+    .ToDoSection {
+        height: 500px;
+    }
+    #button {
+        top: 305px !important;
+        height: 30px !important;
+        width: 300px !important;
+    }
+    .taskInput {
+        height: 250px !important;
+    }
+    #taskInputLine {
+        padding-left: 0px !important;
+        padding-right: 0px !important;
+    }
+    .taskTime {
+        padding-right: 0px !important;
+    }
+    #startTimeSection {
+        width: 90px;
+    }
+    #taskSection {
+        margin-left: 10px;
+    }
+    #button {
+        width: 280px !important;
+    }
+    .taskTime {
+        margin-right: 20px;
+    }
+}
+
+@media (max-width: 830px) {
+    .taskInput {
+        width: 480px;
+        height: 180px;
+    }
+    .List {
+        width: 480px;
+    }
+    #taskInputLine {
+        justify-content: none;
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+    #button {
+        position: fixed;
+        height: 30px;
+        top: 125px;
+        width: 200px;
+    }
+}
+
+@media (max-width: 690px) {
+    .taskInput {
+        width: 300px;
+    }
+    .List {
+        width: 300px;
+    }
+    #button {
+        top: 135px;
     }
 }
