--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -141,6 +141,25 @@ html, body {
     justify-content: space-between;
 }
 
+/* Pomodoro styling */
+
+#topTimerContainer {
+    display: flex;
+}
+
+#workTimerChooser {
+
+}
+
+#shortBreakTimerChooser {
+
+}
+
+#longBreakTimerChooser {
+
+}
+
+
 /* side bar items */
 
 .sideBarText {
